--- a/src/components/Message/index.css
+++ b/src/components/Message/index.css
@@ -3,23 +3,15 @@
   align-items: center;
   gap: 10px;
 }
-.avatar {
-  width: 38px;
-  height: 38px;
-  border-radius: 50%;
-  background-color: red;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+
 .messageItem {
   border-radius: 8px;
   background: #2f2f32;
-  min-width: 200px;
+  min-width: 30px;
   max-width: 350px;
   width: 100%;
   height: auto;
-  padding: 5px 10px ;
+  padding: 5px 10px;
   line-height: 20px;
   box-sizing: border-box;
   overflow: hidden;
@@ -34,5 +26,17 @@
   font-style: normal;
   font-weight: 400;
   word-wrap: break-word;
+  margin: 0;
   overflow-wrap: break-word;
+}
+
+.message-left {
+  align-self: flex-start;
+}
+
+.message-right {
+  align-self: flex-end;
+}
+.message-right .messageItem {
+  background-image: linear-gradient(45deg, #328f8a, #08ac4b);
 }
